--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -25,8 +25,11 @@ dependencies:
     sdk: flutter
     
   provider: ^4.3.2+2
-
   http: ^0.12.2
+  carousel_slider: ^2.3.1
+  audioplayers: ^0.16.1
+  shared_preferences: ^0.5.3+2
+  fluttertoast: ^7.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,6 +55,8 @@ flutter:
     - assets/images/dog_1.png
     - assets/images/dog_2.png
     - assets/images/dog_3.png
+    - assets/sounds/click1.mp3
+    - assets/sounds/sample1.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
