--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -23,17 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-  provider: ^4.3.2+2
-  http: ^0.12.2
-  carousel_slider: ^2.3.1
   audioplayers: ^0.16.1
-  shared_preferences: ^0.5.3+2
-  fluttertoast: ^7.1.1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  carousel_slider: ^2.3.1
   cupertino_icons: ^1.0.0
+  flutter_form_builder: ^3.14.0
+  fluttertoast: ^7.1.1
+  http: ^0.12.2
+  provider: ^4.3.2+2
+  shared_preferences: ^0.5.3+2
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +38,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -57,13 +53,10 @@ flutter:
     - assets/images/dog_3.png
     - assets/sounds/click1.mp3
     - assets/sounds/sample1.mp3
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
