--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   audioplayers: ^0.16.1
   carousel_slider: ^2.3.1
+  circular_countdown_timer: ^0.0.7
   cupertino_icons: ^1.0.0
   flutter_form_builder: ^3.14.0
   fluttertoast: ^7.1.1
