--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -27,11 +27,13 @@ dependencies:
   carousel_slider: ^2.3.1
   circular_countdown_timer: ^0.0.7
   cupertino_icons: ^1.0.0
+  flick_video_player: ^0.1.1
   flutter_form_builder: ^3.14.0
   fluttertoast: ^7.1.1
   http: ^0.12.2
   provider: ^4.3.2+2
   shared_preferences: ^0.5.3+2
+  video_player: ^0.10.8+1
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +43,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
