--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_form_builder: ^3.14.0
   fluttertoast: ^7.1.1
   foundation_fluttify: ^0.10.0
+  group_radio_button: ^1.0.1
   http: ^0.12.2
   path_provider: ^1.6.21
   provider: ^4.3.2+2
@@ -57,6 +58,7 @@ flutter:
     - assets/data/
     - assets/images/
     - assets/sounds/
+    - assets/videos/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
