--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -55,10 +55,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/data/
     - assets/images/
     - assets/sounds/
     - assets/videos/
+    - assets/videos/animation_5.mp4
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
