--- a/lebengrida/android/app/src/main/AndroidManifest.xml
+++ b/lebengrida/android/app/src/main/AndroidManifest.xml
@@ -49,4 +49,6 @@
             android:resource="@xml/network_security_config"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
