--- a/lebengrida/android/app/src/main/AndroidManifest.xml
+++ b/lebengrida/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="lebengrida"
+        android:label="스마트 스피치(S-Speech)"
         android:icon="@mipmap/ic_launcher"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true">
