--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -26,10 +26,11 @@ dependencies:
   audioplayer: ^0.8.1
   audioplayer_web: ^0.7.1
   audioplayers: ^0.13.2
+  cachedflickvideoplayer: ^0.0.1
+  cached_video_player: ^1.0.3
   carousel_slider: ^2.3.1
   circular_countdown_timer: ^0.0.7
   cupertino_icons: ^1.0.0
-  flick_video_player: ^0.1.1
   flutter_form_builder: ^3.14.0
   flutter_launcher_icons: ^0.8.1
   fluttertoast: ^7.1.1
@@ -39,7 +40,6 @@ dependencies:
   path_provider: ^1.6.21
   provider: ^4.3.2+2
   shared_preferences: ^0.5.3+2
-  video_player: ^0.10.8+1
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +61,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
     - assets/data/
     - assets/images/
     - assets/sounds/
