--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   group_radio_button: ^1.0.1
   http: ^0.12.2
   path_provider: ^1.6.21
+  permission_handler: ^5.0.1+1
   provider: ^4.3.2+2
   shared_preferences: ^0.5.3+2
 
