--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cached_video_player: ^1.0.3
   cachedflickvideoplayer: ^0.0.1
   carousel_slider: ^2.3.1
+  carousel_widget:
   circular_countdown: ^1.2.1
   cupertino_icons: ^1.0.0
   flutter_form_builder: ^3.14.0
