--- a/lebengrida/pubspec.yaml
+++ b/lebengrida/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   carousel_widget:
   circular_countdown: ^1.2.1
   cupertino_icons: ^1.0.0
+  date_format: ^1.0.9
   ff_navigation_bar: ^0.1.5
   fl_chart: ^0.12.0
   flutter_form_builder: ^3.14.0
